--- a/FinalProject.html
+++ b/FinalProject.html
@@ -153,7 +153,7 @@ feature.properties.PCT_ASIAN + "%");
       
 	// end document ready
 	});
- <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+ script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script>
 <script>
