--- a/finalproject.html
+++ b/finalproject.html
@@ -180,8 +180,10 @@ feature.properties.MED_GROSS_RENT);
     [39.68396, -104.966362],
     [39.685296, -104.966351],
     [39.684699, -104.965181]
-	 
-    .addTo(map);
+]).addTo(map); 
+    
+.addTo(map);
+	  var polygon = L.polygon([ 
 	  [39.742505, -105.013268],
 	  [39.743544, -105.01139],
 	  [39.74493, -105.009481],
