--- a/finalproject.html
+++ b/finalproject.html
@@ -158,7 +158,7 @@ feature.properties.MED_GROSS_RENT);
     fillOpacity: 0.5,
     radius: 450
 }).addTo(map);
-  var polygon = L.polygon([
+  var polygon = L.polygon1([
     [39.684422, -104.965117],
     [39.683135, -104.961941],
     [39.682715, -104.959565],
@@ -183,7 +183,7 @@ feature.properties.MED_GROSS_RENT);
 ]).addTo(map); 
     
 
-	  var polygon = L.polygon([ 
+	  var polygon = L.polygon2([ 
 	  [39.742505, -105.013268],
 	  [39.743544, -105.01139],
 	  [39.74493, -105.009481],
@@ -202,8 +202,9 @@ feature.properties.MED_GROSS_RENT);
     
 ]).addTo(map);
   marker.bindPopup("<b>Science Building</b><br>Auraria Campus.").openPopup();
-circle.bindPopup("Auraria Campus.");
-polygon.bindPopup("Denver University Campus.");
+circle.bindPopup("Auraria Campus 5 mile Radius.");
+polygon1.bindPopup("Denver University Campus.");
+polygon2.bindPopup("Auraria Campus.");
   var popup = L.popup()
     .setLatLng([39.741617, -105.012876])
     .setContent("Auraria Light-Rail Station.")
