--- a/finalproject.html
+++ b/finalproject.html
@@ -158,7 +158,7 @@ feature.properties.MED_GROSS_RENT);
     fillOpacity: 0.5,
     radius: 450
 }).addTo(map);
-  var polygon = L.polygon1([
+  var polygon 1 = L.polygon([
     [39.684422, -104.965117],
     [39.683135, -104.961941],
     [39.682715, -104.959565],
@@ -183,7 +183,7 @@ feature.properties.MED_GROSS_RENT);
 ]).addTo(map); 
     
 
-	  var polygon = L.polygon2([ 
+	  var polygon 2 = L.polygon([ 
 	  [39.742505, -105.013268],
 	  [39.743544, -105.01139],
 	  [39.74493, -105.009481],
