--- a/finalproject.html
+++ b/finalproject.html
@@ -140,8 +140,8 @@ feature.properties.MED_GROSS_RENT);
     legend.onAdd = function(map) {
         var div = L.DomUtil.create('div', 'info legend');
         colors = ['#FFEDA0','#FED976','#FEB24C','#FD8D3C','#FC4E2A','#E31A1C','#BD0026','#800026'];
-        lables =['0 - 1%', '1 - 4%', '4 - 6%','6 - 8%', '8 - 10%', '10 - 15%', '15 - 20%','20%+'];
-        div.innerHTML = '<h2>% Asian</h2><br>';
+        lables =['< $1000', '$1000 - $1299', '$1300- $1599','$1600 - $1899', '$1900 - $2199', '$2300 - $2499', '$2500 - $2699','$2700 +'];
+        div.innerHTML = '<h2>Average Rent</h2><br>';
         for (var i = 0; i < colors.length; i++) {
           div.innerHTML += '<i style="background:' + colors[i] + '"></i> ' + lables[i] + '<br>';
       
@@ -164,7 +164,9 @@ feature.properties.MED_GROSS_RENT);
     fillColor: '#f03',
     fillOpacity: 0.5,
     radius: 450
-var circle2 = L.circle([39.678934, -104.962628], 
+}).addTo(map);
+	 
+    var circle2 = L.circle([39.678934, -104.962628], {
     color: 'red',
     fillColor: '#f03',
     fillOpacity: 0.5,
