--- a/finalproject.html
+++ b/finalproject.html
@@ -140,7 +140,7 @@ feature.properties.MED_GROSS_RENT);
     legend.onAdd = function(map) {
         var div = L.DomUtil.create('div', 'info legend');
         colors = ['#FFEDA0','#FED976','#FEB24C','#FD8D3C','#FC4E2A','#E31A1C','#BD0026','#800026'];
-        lables =['< $1000', '$1000 - $1299', '$1300- $1599','$1600 - $1899', '$1900 - $2199', '$2300 - $2499', '$2500 - $2699','$2700 +'];
+        lables =['$0 - $999', '$1000 - $1299', '$1300- $1599','$1600 - $1899', '$1900 - $2199', '$2300 - $2499', '$2500 - $2699','$2700 +'];
         div.innerHTML = '<h2>Average Rent</h2><br>';
         for (var i = 0; i < colors.length; i++) {
           div.innerHTML += '<i style="background:' + colors[i] + '"></i> ' + lables[i] + '<br>';
@@ -163,7 +163,7 @@ feature.properties.MED_GROSS_RENT);
     color: 'red',
     fillColor: '#f03',
     fillOpacity: 0.5,
-    radius: 450
+    radius: 500
 }).addTo(map);
 	 
     var circle2 = L.circle([39.678934, -104.962628], {
