--- a/finalproject.html
+++ b/finalproject.html
@@ -163,7 +163,7 @@ feature.properties.MED_GROSS_RENT);
     color: 'red',
     fillColor: '#f03',
     fillOpacity: 0.5,
-    radius: 500
+    radius: 1500
 }).addTo(map);
 	 
     var circle2 = L.circle([39.678934, -104.962628], {
@@ -229,8 +229,12 @@ polygon1.bindPopup("Denver University Campus.");
 polygon2.bindPopup("Auraria Campus.");
   var popup = L.popup()
     .setLatLng([39.741617, -105.012876])
-    .setContent("Auraria Light-Rail Station.")
+    .setContent("Auraria Campus.")
     .openOn(map);
+  var popup = L.popup()
+    .setLatLng([39.679264, -104.962306])
+    .setContent("University of Denver Campus.")
+    .openOn(map);	
   function onMapClick(e) {
     alert("You clicked the map at " + e.latlng);
 }
