--- a/finalproject.html
+++ b/finalproject.html
@@ -247,7 +247,8 @@ function onMapClick(e) {
         .setLatLng(e.latlng)
         .setContent("You clicked the map at " + e.latlng.toString())
         .openOn(map);
-
+}
+   function onMapClick(e) {
     popup2
         .setLatLng(e.latlng)
         .setContent("You clicked the map at " + e.latlng.toString())
