--- a/finalproject.html
+++ b/finalproject.html
@@ -240,7 +240,7 @@ map.on('click', onMapClick);
 map.on('click', onMapClick);
   var popup2 = L.popup()
 	.setLatLng([39.741617, -105.012876])
-    .setContent("Auraria Campus.")
+    .setContent("Auraria .")
     .openOn(map);	
 
 function onMapClick(e) {
