--- a/finalproject.html
+++ b/finalproject.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Lab 10 - Final Project for Web Mapping</title>
+	<title>Web Mapping Final Project - Final Project for Web Mapping</title>
 	
 	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
 
@@ -230,7 +230,7 @@ polygon2.bindPopup("Auraria Campus.");
 		
 map.on('click', onMapClick);		
   var popup = L.popup()
-    .setLatLng([39.679264, -104.962306])
+    .setLatLng([39.679264, -104.962306],[39.743588, -105.005522])
     .setContent("College Campus.")
     .openOn(map);	
 
