--- a/finalproject.html
+++ b/finalproject.html
@@ -230,7 +230,7 @@ polygon2.bindPopup("Auraria Campus.");
 		
 map.on('click', onMapClick);		
   var popup = L.popup()
-    .setLatLng([39.679264, -104.962306],[39.743588, -105.005522])
+    .setLatLng([39.679264, -104.962306]),([39.743588, -105.005522])
     .setContent("College Campus.")
     .openOn(map);	
 
