--- a/finalproject.html
+++ b/finalproject.html
@@ -231,10 +231,13 @@ polygon2.bindPopup("Auraria Campus.");
 map.on('click', onMapClick);		
   var popup = L.popup()
     .setLatLng([39.679264, -104.962306]),([39.743588, -105.005522])
-    .setContent("College Campus.")
+    .setContent("College Campus")
     .openOn(map);	
 
-
+ var popup = L.popup()
+    .setLatLng([39.743588, -105.005522])
+    .setContent("College Campus")
+    .openOn(map);	
 function onMapClick(e) {
     popup
         .setLatLng(e.latlng)
