--- a/finalproject.html
+++ b/finalproject.html
@@ -240,7 +240,7 @@ function onMapClick(e) {
     popup1
         .setLatLng(e.latlng)
         .setContent("You clicked the map at " + e.latlng.toString())
-        .openOn(map);function onMapClick(e); 
+        .openOn(map);function onMapClick(e) 
     popup2
         .setLatLng(e.latlng)
         .setContent("You clicked the map at " + e.latlng.toString())
