--- a/finalproject.html
+++ b/finalproject.html
@@ -232,11 +232,14 @@ polygon2.bindPopup("Auraria Campus.");
     .setContent("College Campus")
     .openOn(map);	
 
+setTimeout(function() {
  var popup2 = L.popup()
     .setLatLng([39.743588, -105.005522])
     .setContent("College Campus")
     .openOn(map);	
 
+
+],0);
 	});
 
 </script>
