--- a/finalproject.html
+++ b/finalproject.html
@@ -135,7 +135,7 @@ feature.properties.MED_GROSS_RENT);
 			layerControl.addOverlay(newLayer, "Highway Markers");
 		});
 
-    var legend = L.control({posistion: 'bottomright'});
+    var legend = L.control({position: 'bottomright'});
 
     legend.onAdd = function(map) {
         var div = L.DomUtil.create('div', 'info legend');
