--- a/finalproject.html
+++ b/finalproject.html
@@ -227,7 +227,25 @@ circle2.bindPopup("University of Denver Campus 5 mile Radius.");
 polygon1.bindPopup("University of Denver Campus.");
 polygon2.bindPopup("Auraria Campus.");
 
-		
+		 var popup = L.popup()
+    .setLatLng([39.743858, -105.007067])
+    .setContent("Auraria Campus.")
+    .openOn(map);
+  function onMapClick(e) {
+    alert("You clicked the map at " + e.latlng);
+}
+
+map.on('click', onMapClick);
+  var popup = L.popup();
+
+function onMapClick(e) {
+    popup
+        .setLatLng(e.latlng)
+        .setContent("You clicked the map at " + e.latlng.toString())
+        .openOn(map);
+}
+
+map.on('click', onMapClick);
 	});
 
 </script>
