--- a/finalproject.html
+++ b/finalproject.html
@@ -165,14 +165,14 @@ feature.properties.MED_GROSS_RENT);
 }).addTo(map);
 	 
     var circle2 = L.circle([39.678934, -104.962628], {
-    color: 'red',
+    color: 'purple',
     fillColor: '#f03',
     fillOpacity: 0.5,
     radius: 4828.03
 }).addTo(map);
 
- var circle3 = L.circle([39.678934, -104.962628], {
-    color: 'red',
+ var circle3 = L.circle([39.789624, -105.031872], {
+    color: 'green',
     fillColor: '#f03',
     fillOpacity: 0.5,
     radius: 4828.03
