--- a/finalproject.html
+++ b/finalproject.html
@@ -156,7 +156,7 @@ feature.properties.MED_GROSS_RENT);
 		 var marker8 = L.marker([39.657652, -104.988023]).addTo(map);
 		 var marker9 = L.marker([39.797305, -105.038738]).addTo(map);
 		 var marker10 = L.marker([39.776849, -105.043555]).addTo(map);
-		 var marker11= L.marker([39.787373, -105.049982]).addTo(map);
+		 var marker11= L.marker([39.779267, -105.054595]).addTo(map);
 		var marker12= L.marker([39.779876, -105.043781]).addTo(map);
 		var marker13= L.marker([39.776498, -105.034262]).addTo(map);
 		var marker14= L.marker([39.678263, -104.96542]).addTo(map);
@@ -244,10 +244,10 @@ feature.properties.MED_GROSS_RENT);
   marker5.bindPopup("<b>Colorado Convention Center</b><br>Theater.").openPopup();
   marker6.bindPopup("<b>Ruby Hill</b><br>Ski/Snowboard Park.").openPopup();
   marker7.bindPopup("<b>Washington Park</b><br>City Park.").openPopup();
-  marker8.bindPopup("<b>Lakeside</b><br>Amusement Park.").openPopup();
+  marker8.bindPopup("<b>Gothic Theartre</b><br>Amiptheatre.").openPopup();
   marker9.bindPopup("<b>Lowell Ponds</b><br>Wildlife Area.").openPopup();
   marker10.bindPopup("<b>Oriental Theatre</b><br>Ampitheatre.").openPopup();
-  marker11.bindPopup("<b>Willis Case Golf Course</b><br>Golf Course and Driving Range.").openPopup();
+  marker11.bindPopup("<b>Lakeside</b><br>Amusement Park.").openPopup();
   marker12.bindPopup("<b>Local 46</b><br>Bar and Biergarten.").openPopup();
   marker13.bindPopup("<b>Tocabe</b><br>Restaurant.").openPopup();
   marker14.bindPopup("<b>Jerusalem</b><br>Restaurant.").openPopup();
