--- a/finalproject.html
+++ b/finalproject.html
@@ -288,7 +288,7 @@ map.on('click', onMapClick);
 
 <div id="header">
 	<h1><a href="https://www.census.gov/programs-surveys/acs">Denver 2021 American Community Survey (Census) data</a></h1>
-  <h2> Which College Should I Attend? Average Rent Prices and Attractions Within a 3-Mile Radius of Each Campus </h2>
+  <h2> Which College Should I Attend? Average Rent Prices and Attractions Within a 3-Mile Radius of 3 Different Colleges </h2>
 	<p>Data from <a href="https://denvergov.org/opendata/dataset/city-and-county-of-denver-american-community-survey-blk-grp-2017-2021">Denver Open Data</a></p>
 </div>
 <div id="map"></div>
