--- a/finalproject.html
+++ b/finalproject.html
@@ -124,7 +124,7 @@ feature.properties.MED_GROSS_RENT);
 			
 			map.panTo(acsDenver2021Layer.getBounds().getCenter());
 
-			
+			layerControl.addOverlay(acsDenver2021Layer, "Average Rent Prices");
 			
 	        });
 
