--- a/finalproject1.html
+++ b/finalproject1.html
@@ -111,28 +111,20 @@
 	            
     }
 		
-    // let's add the Denver ACS data -- ##4 here
-                $.getJSON('./acs_denver_2021.geojson', function(data) {
-			// convert the file (data) into a layer
+    $.getJSON('./acs_denver_2021.geojson', function(data) {
+			
 			acsDenver2021Layer = L.geoJSON(data, { style : style1,
 			onEachFeature : function(feature, layer) {
-				layer.bindPopup("Percent Asian: " + 
-feature.properties.PCT_ASIAN + "%");
+				layer.bindPopup("Average Rent: " + 
+feature.properties.MED_GROSS_RENT);
 				}
 			}).addTo(map);
-
-			// move the map to the area of the data 
+			
 			map.panTo(acsDenver2021Layer.getBounds().getCenter());
-
-			// add the map to the layer controls
-			layerControl.addOverlay(acsDenver2021Layer, "Census 2021");
+			
+			layerControl.addOverlay(acsDenver2021Layer, "Average Rent Prices");
 	        });
-
-		// let's try to add some remote DRCOG data
-		$.getJSON('https://data.colorado.gov/api/geospatial/trm9-dm4m?method=export&format=GeoJSON', function(data) {
-			newLayer = L.geoJSON(data);
-			layerControl.addOverlay(newLayer, "Highway Markers");
-		});
+	
 
     var legend = L.control({posistion: 'bottomright'});
 
