--- a/finalproject.html
+++ b/finalproject.html
@@ -15,11 +15,30 @@
 
 
 	<style>
-		html, body {
-			height: 100%;
+		height: 100%;
 			margin: 0;
+			padding: 0;
+			font-family: Verdana, sans-serif;
+			background-color: #000000;
+		}
+		#wrapper {
+			
+			margin: 15px;
+			padding: 15px;
 		}
 		
+		#header {
+			width: 100%;
+			height: 100px;
+			
+			align: center;
+		}
+		
+		#pagetext {
+			width: 100%;
+			background-color: #e7dad2;
+			line-height: 1.5em;			
+		}
 		#map { width:100%; height: 70%; }
 		
 		h1 { color: #3293a8;
