--- a/finalproject.html
+++ b/finalproject.html
@@ -160,6 +160,16 @@ feature.properties.MED_GROSS_RENT);
 		var marker13= L.marker([39.776498, -105.034262]).addTo(map);
 		var marker14= L.marker([39.678263, -104.96542]).addTo(map);
 		var marker15= L.marker([39.702525, -104.959044]).addTo(map);
+
+  var viewCounter = 1;
+   $("#mapswitcher").click( function() {
+	   viewCounter++;
+	   if (viewCounter % 2 == 0) {
+		   map.setView([39.743595, -105.005586], 8);
+	   } else {
+		map.setView([39.732725, -104.980545], 11);
+	   }
+   });
 		
   var circle1 = L.circle([39.743825, -105.005586], {
     color: 'red',
@@ -289,6 +299,8 @@ map.on('click', onMapClick);
 	<h1><a href="https://www.census.gov/programs-surveys/acs">Denver 2021 American Community Survey (Census) data</a></h1>
   <h2> Which College Should I Attend? Average Rent Prices and Attractions Within a 3-Mile Radius of 3 Different Colleges </h2>
 	<p>Data from <a href="https://denvergov.org/opendata/dataset/city-and-county-of-denver-american-community-survey-blk-grp-2017-2021">Denver Open Data</a></p>
+	<button id="mapswitcher">Auraria Campus</button>
+	
 </div>
 <div id="map"></div>
 
