--- a/finalproject.html
+++ b/finalproject.html
@@ -156,11 +156,13 @@ feature.properties.MED_GROSS_RENT);
 		 var marker9 = L.marker([39.797305, -105.038738]).addTo(map);
 		 var marker10 = L.marker([39.776849, -105.043555]).addTo(map);
 		 var marker11= L.marker([39.779267, -105.054595]).addTo(map);
-		var marker12= L.marker([39.779876, -105.043781]).addTo(map);
-		var marker13= L.marker([39.776498, -105.034262]).addTo(map);
-		var marker14= L.marker([39.678263, -104.96542]).addTo(map);
-		var marker15= L.marker([39.702525, -104.959044]).addTo(map);
-
+		 var marker12= L.marker([39.779876, -105.043781]).addTo(map);
+		 var marker13= L.marker([39.776498, -105.034262]).addTo(map);
+		 var marker14= L.marker([39.678263, -104.96542]).addTo(map);
+		 var marker15= L.marker([39.702525, -104.959044]).addTo(map);
+                 var marker16= L.marker([39.743825, -105.005586]).addTo(map);
+	         var marker17= L.marker([39.678934, -104.962628]).addTo(map);
+		 var marker18= L.marker([39.789624, -105.031872]).addTo(map);
   var viewCounter = 1;
    $("#mapswitcher").click( function() {
 	   viewCounter++;
@@ -281,6 +283,9 @@ feature.properties.MED_GROSS_RENT);
   marker13.bindPopup("<b>Tocabe</b><br>Restaurant.").openPopup();
   marker14.bindPopup("<b>Jerusalem</b><br>Restaurant.").openPopup();
   marker15.bindPopup("<b>Bonie Brae</b><br>Tavern.").openPopup();
+  marker16.bindPopup("<b>Auraria Campus</b><br>College Campus.").openPopup();
+  marker17.bindPopup("<b>University of Denver Campus</b><br>College Campus.").openPopup();
+  marker19.bindPopup("<b>Regis University Campus</b><br>College Campus.").openPopup();
   
 	circle1.bindPopup("Auraria Campus 3 mile Radius.");
 	circle2.bindPopup("University of Denver Campus 3 mile Radius.");
