--- a/finalproject.html
+++ b/finalproject.html
@@ -158,7 +158,7 @@ feature.properties.MED_GROSS_RENT);
 		 var marker15= L.marker([39.702525, -104.959044]).addTo(map);
                  var marker16= L.marker([39.743825, -105.005586]).addTo(map);
 	         var marker17= L.marker([39.678934, -104.962628]).addTo(map);
-		 var marker18= L.marker([39.789624, -105.031872]).addTo(map);
+		 var marker18= L.marker([39.789624, -105.031872]), color: 'red'.addTo(map);
   var viewCounter = 1;
    $("#mapswitcher").click( function() {
 	   viewCounter++;
