--- a/finalproject.html
+++ b/finalproject.html
@@ -81,7 +81,13 @@
 		
 		var layerControl = L.control.layers(baseMaps,null).addTo(map);
     
- 
+ var redIcon = new L.Icon({
+    iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png',
+    iconSize: [25, 41],
+    iconAnchor: [12, 41],
+    popupAnchor: [1, -34],
+    shadowSize: [41, 41]
+});
 		
     function style1(feature) {
 	    d = feature.properties.MED_GROSS_RENT;
@@ -156,9 +162,9 @@ feature.properties.MED_GROSS_RENT);
 		 var marker13= L.marker([39.776498, -105.034262]).addTo(map);
 		 var marker14= L.marker([39.678263, -104.96542]).addTo(map);
 		 var marker15= L.marker([39.702525, -104.959044]).addTo(map);
-                 var marker16= L.marker([39.743825, -105.005586]).addTo(map);
-	         var marker17= L.marker([39.678934, -104.962628]).addTo(map);
-		 var marker18= L.marker([39.789624, -105.031872]).addTo(map);
+                 var marker16= L.marker([39.743825, -105.005586]{ icon: redIcon }).addTo(map);
+	         var marker17= L.marker([39.678934, -104.962628]{ icon: redIcon }).addTo(map);
+		 var marker18= L.marker([39.789624, -105.031872]{ icon: redIcon }).addTo(map);
   var viewCounter = 1;
    $("#mapswitcher").click( function() {
 	   viewCounter++;
