--- a/finalproject.html
+++ b/finalproject.html
@@ -162,9 +162,9 @@ feature.properties.MED_GROSS_RENT);
 		 var marker13= L.marker([39.776498, -105.034262]).addTo(map);
 		 var marker14= L.marker([39.678263, -104.96542]).addTo(map);
 		 var marker15= L.marker([39.702525, -104.959044]).addTo(map);
-                 var marker16= L.marker([39.743825, -105.005586]{ icon: redIcon }).addTo(map);
-	         var marker17= L.marker([39.678934, -104.962628]{ icon: redIcon }).addTo(map);
-		 var marker18= L.marker([39.789624, -105.031872]{ icon: redIcon }).addTo(map);
+                 var marker16= L.marker([39.743825, -105.005586], { icon: redIcon }).addTo(map);
+	         var marker17= L.marker([39.678934, -104.962628], { icon: redIcon }).addTo(map);
+		 var marker18= L.marker([39.789624, -105.031872], { icon: redIcon }).addTo(map);
   var viewCounter = 1;
    $("#mapswitcher").click( function() {
 	   viewCounter++;
